--- a/public/components/button/button.scss
+++ b/public/components/button/button.scss
@@ -1,7 +1,7 @@
 .btn-form {
 	margin-left: 100px;
 	margin-top: 10px;
-	font-family: "Roboto-Regular";
+	font-family: "Lilita One";
 	display: inline-block;
 	position: relative;
 	width: 200px;
